fixing some weird schedule views on mobile

--- a/Web/css/less/main.less
+++ b/Web/css/less/main.less
@@ -448,6 +448,14 @@ input.mid-number {
   .pull-right-sm {
     float:right;
   }
+}@media(min-width:1200px) {
+  .pull-left-lg {
+    float:left;
+  }
+
+  .pull-right-lg {
+    float:right;
+  }
 }
 
 .select2-container .select2-search__field:not([placeholder='']) {
